Backtracked on GUI work
Trying to run before I can walk here. Need to do a lot more background
work before working on the GUI.

--- a/Bluephase.Data/Bluephase.Data.csproj
+++ b/Bluephase.Data/Bluephase.Data.csproj
@@ -48,7 +48,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BluephaseUnitOfWork.cs" />
     <Compile Include="Model\Address.cs">
       <DependentUpon>BluephaseDataModel.tt</DependentUpon>
     </Compile>
@@ -381,10 +380,9 @@
       <DependentUpon>BluephaseDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CustomerContactRepository.cs" />
-    <Compile Include="Repositories\CustomerRepository.cs" />
-    <Compile Include="Repositories\PersonRepository.cs" />
-    <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Queries\CustomerQueries.cs" />
+    <Compile Include="Queries\PartQueries.cs" />
+    <Compile Include="Queries\QueryObjectBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model\BluephaseDataModel.edmx">
@@ -411,6 +409,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
