--- a/Bluephase.Common/Bluephase.Common.csproj
+++ b/Bluephase.Common/Bluephase.Common.csproj
@@ -41,12 +41,8 @@
   <ItemGroup>
     <Compile Include="IDialogService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\ICustomerManagementView.cs" />
-    <Compile Include="Views\IView.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Presenters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
